[tool.poetry]
name = "investor"
version = "0.1.0"
description = "Software to track investments"
authors = ["Rafael Miranda <rafaelnevesmiranda96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
